--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "h:\\Code\\github\\sql2puml\\env\\Scripts\\python.exe"
+    "python.pythonPath": "c:\\code\\github\\sql2puml\\.env\\Scripts\\python.exe"
 }
